# taotie

./: Cargo.toml  deny.toml
assets/: juventus.csv  sample.parquet  users.ndjson
examples/: arrow_serde.rs  ndjson.rs  pq.rs
notebooks/: pyproject.toml
notebooks/.ipynb_checkpoints/: taotie-checkpoint.ipynb
src/: lib.rs  main.rs
src/backend/: data_fusion.rs  mod.rs
src/backend/fusion/: data_fusion.rs  describe.rs  df_describe.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
